--- a/bgtrekwebsite.client/src/components/Navbar/Navbar.module.css
+++ b/bgtrekwebsite.client/src/components/Navbar/Navbar.module.css
@@ -1,12 +1,5 @@
-:root {
-  --default-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Ubuntu, "Helvetica Neue", Helvetica, Arial, "PingFang SC",
-    "Hiragino Sans GB", "Microsoft Yahei UI", "Microsoft Yahei",
-    "Source Han Sans CN", sans-serif;
-}
-
 .mainContainer {
-  overflow: hidden;
+  overflow: unset;
 }
 
 .mainContainer,
@@ -26,7 +19,7 @@ button {
   width: 1440px;
   height: 99px;
   margin: 0 auto;
-  border-bottom: 4px solid rgba(0, 134, 105, 0.6);
+  border-bottom: 4px solid rgb(0, 255, 200);
 }
 
 .navbarBackground {
@@ -260,8 +253,7 @@ button {
   gap: 37px;
   position: absolute;
   width: 468.92px;
-  height: 39px;
-  top: 30px;
+  height: 100%;
   left: 292px;
   z-index: 3;
 }
@@ -273,5 +265,48 @@ button {
   font-family: Josefin Slab, var(--default-font-family);
   font-size: 24px;
   font-weight: normal;
-  line-height: 24px;
+}
+
+.dropdown {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dropdownButton {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdownContent {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  position: absolute;
+  height: 112px;
+  min-width: 210px;
+  gap: 14px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  background: linear-gradient(45deg, rgba(85, 235, 181, 0.9) 0%, rgba(35, 44, 238, 0.9) 100%);
+
+  top: 0;
+  transform: translateY(60%);
+}
+
+.dropdownContent a {
+  display: block;
+  font-size: 24px;
+  font-family: Josefin Slab, var(--default-font-family);
+  color: white;
+  filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
+}
+
+.line {
+  height: 0;
+  width: 90%;
+  border-top: 4px dashed rgba(255, 255, 255, 0.6);
 }
