Added bootstrap components. Changed css. Fixed navbar not sticking to top.

--- a/bgtrekwebsite.client/src/pages/Home/Home.module.css
+++ b/bgtrekwebsite.client/src/pages/Home/Home.module.css
@@ -219,6 +219,7 @@ button {
 }
 
 .exploreTheHiddenGemsOfBulgaria {
+    line-height: normal;
     flex-shrink: 0;
     position: relative;
     width: 740px;
