--- a/bgtrekwebsite.client/src/components/Navbar/Navbar.module.css
+++ b/bgtrekwebsite.client/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,3 @@
-.mainContainer {
-  overflow: unset;
-}
-
 .mainContainer,
 .mainContainer * {
   box-sizing: border-box;
@@ -14,8 +10,13 @@ button {
   outline: 0;
 }
 
+nav {
+  top: var(--navbar-scoll);
+}
+
 .mainContainer {
-  position: relative;
+  position: sticky;
+  z-index: 100;
   width: 1440px;
   height: 99px;
   margin: 0 auto;
@@ -276,25 +277,32 @@ button {
 .dropdownButton {
   background: none;
   border: none;
-  cursor: pointer;
+}
+
+.dropdownMenu {
+  inset: 0 auto !important;
+  width: 100%;
+  padding: 0;
+  border: none;
+  background: none;
+  transform: none;
 }
 
 .dropdownContent {
-  display: none;
+  top: 0.5rem;
+  padding: 0.5rem;
+  display: flex;
   flex-direction: column;
   justify-content: center;
+  left: 50%;
+  transform: translateX(-50%);
   align-items: center;
   border-radius: 10px;
   position: absolute;
-  height: 112px;
-  min-width: 210px;
   gap: 14px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   background: linear-gradient(45deg, rgba(85, 235, 181, 0.9) 0%, rgba(35, 44, 238, 0.9) 100%);
-
-  top: 0;
-  transform: translateY(60%);
 }
 
 .dropdownContent a {
@@ -303,6 +311,7 @@ button {
   font-family: Josefin Slab, var(--default-font-family);
   color: white;
   filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
+  text-align: center;
 }
 
 .line {
