--- a/bgtrekwebsite.client/src/index.css
+++ b/bgtrekwebsite.client/src/index.css
@@ -14,8 +14,8 @@
         Ubuntu, "Helvetica Neue", Helvetica, Arial, "PingFang SC",
         "Hiragino Sans GB", "Microsoft Yahei UI", "Microsoft Yahei",
         "Source Han Sans CN", sans-serif;
-    
-    
+
+    --navbar-scroll: 0;
 }
 
 a,
@@ -37,8 +37,7 @@ a:active {
 }
 
 body {
-    background-color: #121B3A;
+    background-color: #0b1124 !important;
     margin: 0;
     padding: 0;
-    /* Set the origin point at top center */
 }
